--- a/layout/partial/comment.jade
+++ b/layout/partial/comment.jade
@@ -25,3 +25,17 @@ if theme.disqus
             (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
     script(id='dsq-count-scr' src='//#{theme.disqus}.disqus.com/count.js' async)
+
+if theme.gitalk
+    div#gitalk-container
+    script(src='https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js')
+    script.
+        const gitalk = new Gitalk({
+            clientID: '#{theme.gitalk.clientID}',
+            clientSecret: '#{theme.gitalk.clientSecret}',
+            repo: '#{theme.gitalk.repo}',
+            owner: '#{theme.gitalk.owner}',
+            admin: ['#{theme.gitalk.admin}'],
+            distractionFreeMode: false  // Facebook-like distraction free mode
+        });
+        gitalk.render('gitalk-container');
