--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -1,5 +1,5 @@
 //- LaTex
-script(async src="https://cdn.jsdelivr.net/npm/mathjax@2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" integrity="sha384-crwIf/BuaWM9rM65iM+dWFldgQ1Un8jWZMuh3puxb8TOY9+linwLoI7ZHZT+aekW" crossorigin="anonymous")
+script(async src="https://cdn.jsdelivr.net/npm/mathjax@2.7.5/MathJax.js?config=TeX-MML-AM_CHTML")
 
 //- Analytics tracking
 - var ga = theme.ga
