--- a/source/css/apollo.css
+++ b/source/css/apollo.css
@@ -248,6 +248,12 @@ ul.post-list {
     list-style-type: none
 }
 
+.tag-title {
+    font-size: 1em;
+    color: #42b983;
+    padding-left: 10px
+}
+
 ul {
     margin: 1rem 0
 }
