--- a/layout/mixins/post.jade
+++ b/layout/mixins/post.jade
@@ -2,8 +2,7 @@ mixin postInfo(item)
     .post-info
         != full_date(item.date, 'll')
         if item.from && (is_home() || is_post())
-            a.post-from(href=item.from target="_blank" title=item.from)!= __('translated')
-
+            a.post-from(href=item.from target="_blank" title=item.from) 翻译 · 原文地址
 
 //- Index Page
 mixin posts()
@@ -14,6 +13,11 @@ mixin posts()
                     h2.post-title
                         a.post-title-link(href= url_for(item.path))
                             != item.title
+                    .tags
+                        if item.tags
+                            for tag in item.tags.toArray()
+                                a.tag-title(href=url_for(tag.path))
+                                    != '#' + tag.name
                     +postInfo(item)
                     .post-content
                         != item.excerpt
@@ -29,7 +33,7 @@ mixin postList()
             - var itemYear = date(item.date, 'YYYY') - 0;
             - change = year !== itemYear;
             - year = change ? itemYear : year;
-            if change 
+            if change
                 h2.archive-year!= year
             .post-item
                 +postInfo(item)
@@ -43,6 +47,12 @@ mixin post(item)
         article.post-block
             h1.post-title
                 != item.title
+
+            .tags
+                if item.tags
+                    for tag in item.tags.toArray()
+                        a.tag-title(href=url_for(tag.path))
+                            != '#' + tag.name
             +postInfo(item)
             .post-content
                 != item.content
