--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -10,9 +10,9 @@ if ga
         | ,'auto');ga('send','pageview');
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-script(async src='https://www.googletagmanager.com/gtag/js?id=#{config.url}')
+script(async src='https://www.googletagmanager.com/gtag/js?id=#{config.googleAnalytics}')
 script
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', '#{config.url}');
+    gtag('config', '#{config.googleAnalytics}');
