--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -11,8 +11,8 @@ if ga
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 script(async src='https://www.googletagmanager.com/gtag/js?id=#{config.googleAnalytics}')
-script
+script.
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    gtag('js', new Date())
     gtag('config', '#{config.googleAnalytics}');
